--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="chuaholdingsNavbar">
                 <span class="navbar-text ml-auto">
                     <ul class="navbar-nav">
-                        <li class="nav-item text-uppercase"><a class="nav-link" href="#chuaholdingsNavbar">Home</a>
+                        <li class="nav-item text-uppercase"><a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item text-uppercase"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item text-uppercase"><a class="nav-link" href="#contact">Contact</a></li>
@@ -152,7 +152,7 @@
 
     
 
-    <div class="landing d-flex justify-content-center align-items-center">
+    <div class="landing d-flex justify-content-center align-items-center" id="home">
         <div class="row landing-text d-flex flex-column align-items-center">
           <h1 class="col-12 text-center">Chua Holdings LLC</h1>
           <h4 class="col-12 text-center">Your Import/Export Company</h4>
